добавил: пакет controllers/http/v1 для обработки http-запросов; описал openapi документацию для первого метода контроллера; добавил ошибки в пакет errs, в domain и /inputs исправил поля у некоторых структур; из пакета jwt убрал в конструкторе структуры expires поле, теперь оно используется в структуре CreateParams которую принимает метод Create для создания токена
