# internal/controllers/http/v1/routes.go
@@ -1,0 +1,4 @@
+package v1
+
+const registerRoute = "/register"
+const loginRoute = "/login"
